Taking info from git, not gdrive

--- a/VC_Investment.ipynb
+++ b/VC_Investment.ipynb
@@ -38,32 +38,14 @@
       "metadata": {
         "id": "I0OTz1Y-V09P",
         "colab_type": "code",
-        "outputId": "16b3f6d8-9de5-47b7-c0d7-3827564320d8",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 122
-        }
+        "colab": {}
       },
       "source": [
         "import pandas as pd \n",
-        "import matplotlib.pyplot as plt\n",
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        "import matplotlib.pyplot as plt"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
-            "Mounted at /content/drive\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -80,18 +62,18 @@
       "metadata": {
         "id": "l8R-BCD8YRB0",
         "colab_type": "code",
-        "outputId": "433dd1a4-d3ff-4c39-a45f-b6748a19f5cb",
+        "outputId": "be0e2d46-0088-42e9-fc5f-a71b272798b8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 813
         }
       },
       "source": [
-        "vc_path = \"/content/drive/My Drive/data/VC_INVEST_04042020151626788.csv\"\n",
+        "vc_path = \"https://raw.githubusercontent.com/csd-oss/vc-investmemt/master/VC_INVEST_06042020205501847.csv\"\n",
         "df = pd.read_csv(vc_path)\n",
         "df"
       ],
-      "execution_count": 0,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -423,7 +405,7 @@
       "metadata": {
         "id": "8V7ELJS_bSPw",
         "colab_type": "code",
-        "outputId": "d02c092f-fa98-4ffb-8d95-a2603ecea9ee",
+        "outputId": "ea135bb8-1e70-4b31-9a34-23a1ea4e4896",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 419
@@ -433,7 +415,7 @@
         "df = df.drop(columns=[\"Reference Period Code\",\"Reference Period\",\"Flag Codes\",\"Flags\",\"SUBJECT\",\"Measure\",\"Unit\",\"Year\",\"Subject\",\"SUBJECT\",\"Development stages\"])\n",
         "df"
       ],
-      "execution_count": 0,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -705,7 +687,7 @@
       "metadata": {
         "id": "CUlOwveFZ2SC",
         "colab_type": "code",
-        "outputId": "d63f36ef-6f37-417a-82fd-01b171318724",
+        "outputId": "6359b1a7-4209-4d36-e50d-db5aed7d2f05",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 299
@@ -725,7 +707,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "display_data",
