summed info for 1 year

--- a/VC_Investment.ipynb
+++ b/VC_Investment.ipynb
@@ -20,7 +20,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/csd-oss/vc-investmemt/blob/iss1/VC_Investment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/csd-oss/vc-investmemt/blob/iss2/VC_Investment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -721,6 +721,46 @@
           "metadata": {
             "tags": []
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aMUqCt75qfxq",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Countries Yearly Sum"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IxAs6pswqlUb",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "ed9e5f54-537e-4058-c576-0ca610ec68b9"
+      },
+      "source": [
+        "df_usd.loc[(df_usd['STAGES'] == \"VC_T\") & (df_usd['TIME'] ==2006),\"Value\"].sum()"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "28807.657229398963"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 20
         }
       ]
     }
