us uk pie chart

--- a/VC_Investment.ipynb
+++ b/VC_Investment.ipynb
@@ -20,7 +20,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/csd-oss/vc-investmemt/blob/iss2/VC_Investment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/csd-oss/vc-investmemt/blob/iss4/VC_Investment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -73,7 +73,7 @@
         "df = pd.read_csv(vc_path)\n",
         "df"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -415,7 +415,7 @@
         "df = df.drop(columns=[\"Reference Period Code\",\"Reference Period\",\"Flag Codes\",\"Flags\",\"SUBJECT\",\"Measure\",\"Unit\",\"Year\",\"Subject\",\"SUBJECT\",\"Development stages\"])\n",
         "df"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -708,7 +708,7 @@
         "ax.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -739,11 +739,11 @@
       "metadata": {
         "id": "6-yrqLZD2Dfy",
         "colab_type": "code",
+        "outputId": "5bd22508-78fb-47f2-c67e-2f9a2ae93bcb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 299
-        },
-        "outputId": "5bd22508-78fb-47f2-c67e-2f9a2ae93bcb"
+        }
       },
       "source": [
         "filt_total = (df_usd['STAGES'] == \"VC_T\") & (df_usd['TIME'] >= 2007) #not enoght data till 2007\n",
@@ -752,7 +752,7 @@
         "plt.ylabel('Millions USD')\n",
         "plt.show()"
       ],
-      "execution_count": 83,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -765,6 +765,132 @@
           "metadata": {
             "tags": []
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6FZ5yJNVG8PI",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 2018 Piechart creation"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1DgU_CoSHTGI",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 248
+        },
+        "outputId": "ff2b67db-0fdb-4b5f-f287-afb876d43fed"
+      },
+      "source": [
+        "filt_total_2018 = (df_usd['TIME']==2018)&(df_usd['STAGES']=='VC_T') \n",
+        "filt_other = df_usd['Value'] > 2185.094678\n",
+        "\n",
+        "plt.pie(df_usd[filt_total_2018&filt_other]['Value'])\n",
+        "plt.legend(df_usd[filt_total_2018&filt_other]['Country'] )\n",
+        "\n",
+        "plt.show()"
+      ],
+      "execution_count": 108,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "image/png": "iVBORw0KGgoAAAANSUhEUgAAAOcAAADnCAYAAADl9EEgAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADh0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uMy4yLjEsIGh0\ndHA6Ly9tYXRwbG90bGliLm9yZy+j8jraAAAbZklEQVR4nO3deXxU9b3/8ddsyWSHrJCwhlUwSCNI\nuGwqWkREsdfqr9W2tt4WVCq/q1BxKaUuQBGrVmmta6vIT3sV/CEVAQHZi6KyCgQkJCEh+zaTMMls\n94+UyBZISDLf75n5PB8PH5jkZM4nyXnP95zzXY7J7/f7EUJox6y6ACHE+Uk4hdCUhFMITUk4hdCU\nhFMITUk4hdCUhFMITUk4hdCUhFMITUk4hdCUVXUBonl+v5/S0lLcbrfqUkQ7sNlsJCUlYTKZWrS9\nScbW6qukpASPx4PNZlNdimgHbrcbq9VKcnJyi7aX01qNud1uCWYQsdlsrToLknAKoSkJpxCakhtC\nBuK6e2K7vp79b6su+PW8vDzuuusuNm3a1PS5hQsXEhUVxf3339/s9+3atYt//OMfzJs3j61bt2Kz\n2bjqqqtaVduVV17JmjVrSEhIaPbzu3fv5p577uHNN9+koKCA7OxsHnjggVbt53y2bt3Kn//8Z955\n5502v1ZbSDhFuxs6dChDhw4FGg/0qKioVofzYvbv388999zDK6+8QkZGBhkZGdxwww3tug/VJJzi\nkk2ZMoXMzEy2bt1KdXU1zz//PFlZWU0tz/z58/n73/+OxWLh/fffZ/78+fTt25dZs2ZRUFAAwJNP\nPsmIESOoqKhg6tSpFBUVMWzYMC7UiXD48GGmT5/OSy+9RGZmJgDvvvsuu3btYsGCBfz6178mJiaG\nXbt2UVJSwu9+9zsmT56Mz+dj9uzZbNmyhdTUVGw2Gz/+8Y+ZPHky69ev5/HHHyciIoIRI0Y07auy\nspIZM2aQm5tLZGQkixYtYvDgwSxcuJC8vDxyc3MpKCjgiSee4Msvv2T9+vV06dKFJUuWtPlmnlxz\nijbxeDysXr2ap556imeeeeaMr/Xo0YOf/exnTJ06lQ0bNpCVlcXjjz/O1KlTWbNmDW+88QYPPvgg\nAIsWLWLEiBFs3ryZG2+8kePHjze7z5/+9KcsWLCArKysZrcpLi5m5cqVvPPOOzz55JMA/POf/yQ/\nP58tW7awePFidu7cCYDL5eLBBx9kyZIlfPrpp5SUlDS9zsKFC8nIyGDjxo08+uijTJ8+velrx44d\nY9myZbz11lvcf//9jB49mo0bN2K321m7dm3rf5lnkZZTNKu5zvLTPz9p0iQAhgwZQn5+/kVfc9Om\nTRw6dKjpY4fDgdPpZPv27bz55psAXH/99XTq1KnZ1xg7dixLlizhmmuuwWKxnHebiRMnYjabGTBg\nAKWlpQDs2LGDm2++GbPZTEpKCqNGjQIaW+IePXqQnp4OwG233cbbb7/d9D1vvPEGAGPGjKGyshKH\nwwHA+PHjsdlsDBo0CK/Xy7XXXgvAZZdd1qLfxcVIyyma1blzZ6qqqs74XFVVFfHx8U0fh4eHA2Cx\nWPB6vRd9TZ/Px6pVq9iwYQMbNmxgz549REdHt6qu+fPnA/Cb3/ym2W1O1QVc8BS5LcLCwgAwm81Y\nrdamNy2z2YzH42nz60s4RbOio6NJSUlh8+bNQOP11/r168+4JmvJazidzqaPr776al577bWmj/fu\n3QvAyJEjWbZsGQDr1q07503hdGazmZdffpkjR46wYMGCFtdy1VVXsXLlSnw+HyUlJWzbtg2Afv36\nkZ+fT05ODgDLly9v+p6srCw++OADoPHmVnx8PDExMS3eZ1vIaa2BXKzroyO89NJLzJ49mzlz5gAw\nc+ZMevfu3eLvnzBhAr/4xS/45JNPmD9/Pk8//TSzZ89m3LhxeL1esrKyWLRoETNnzmTq1KmMGTOG\n4cOH061btwu+rt1u5+233+aWW24hKSmJqKioi9Zy0003sWnTJkaPHk1qaioZGRnExMRgt9t59tln\nufPOO4mIiCArK6vpDWXWrFnMmDGDcePGERkZyYsvvtjin72tZGytxgoKCppOnUT7cDqdREdHU1FR\nwYQJE1i5ciUpKSkB239DQwNpaWkt2lZaThFS7rrrLqqrq3G73Tz00EMBDWZrScupMWk5g09rWk65\nISSEpuS0VmNen496jw+P14fb58fj9eHx+fH6/Hj9jf/6zjrxMWE6/QNMgMVswmo2YbOYsZpNWM1m\nrBYTNrMJi8VMy6b+ikCTcGqiqq6BQyVOsksc//7Xyfe7WenftfnO+PZhIsxqwm61EGGzYLdZsNvM\nmFs4W190HAmnAn6/n4PFDrbllLOvsIbsEiclzvpzt+sWF4hqaPD4afD4qHF9NxE4zGohwmbGbmsM\nbYTt/CNxRMeRcAaIs97DjmMVbDlaxvacCsprG1r9Gg99ktuuNT17Q89mv9bg8ZKbm8sj03/J35av\nwmI2Ex1u4fXFL9A5Nobp09VMGVu6dCl//etfgcY3uUceeYSJEyfy7rvvcvXVV9OlS5cLvm5Lt9OB\nhLMD5VXW8Vl2KVtzytldUI3XZ9wb416fj+qTPhwuNx5zPXmVdcSEW4mx27CazzwF7qgpY4WFhTz3\n3HOsW7eO2NhYnE4n5eXlQGPoBg4c2KJwtmQ7HUg421mDx8f67BKW7ynkq/zmh6AZXW29h/+683Yu\nyxjK7p07qHPW8MLzzzNy5MgOmzJWVlZGdHR002ig6OhooqOj+eijj9i1axf33nsvdrudjz/+mMWL\nF7NmzRpcLhfDhw9n0aJFrFy58pztsrOzmTNnDrW1tcTHx/Piiy+SkpLCq6++2lT7gAEDeOWVVwL6\n+wUJZ7s5WlbLh3sK+fibIqpPhs5Sll6vh7+88wH/2vwZT87/A39f+h5enw/4bsrY6SsnTJs2jalT\np5KVlcXx48e544472Lp1a9OUsZkzZ7J27drzrkIwePBgkpKSGDZsGGPGjGHSpElMmDCByZMn8/rr\nrzN37tymFvuee+5h5syZANx3332sWbPmnO3cbjePPPIIb731FomJiXz44YfMmzePF154gT/96U/s\n3LmT8PBwqqurA/TbPJOEsw0aPD7WHixm+Z5Cdheo+QN2pOanjH33/2PHTwCg/6DLOVFwnDJnPcer\nXJx0e6ltOHdmRlumjFksFt577z2+/vprNm/ezG9/+1t279593tkpp+Zsnjx5ksrKSgYOHMiECRPO\n2ObIkSMcPHiQH/7wh0DjjJlTy1YOGjSIe++9l4kTJzJxYvsuD9NSEs5L4HJ7Wb6nkLc/z6XU2fob\nO0YR26kTDkfNGZ+rqamma1r3po9tp02b+m7KWGMfbF5FHZV1bixhPvw09rmemjJmt9svqSaTyURm\nZiaZmZmMGzeOGTNmnBNOl8vFww8/zNq1a0lLS2PhwoW4XK5zXsvv9zNgwABWrTp3QsHSpUvZvn07\nq1ev5vnnn2fjxo1YrYGNi4wQaoV6j5elO/OY8up2/rj+cFAHEyAyMoqExCS+2rEdgJrqKj7fuomM\nzCtb/BrhEREUlVeSU1aLw+Vp05SxoqIi9uzZ0/Txvn37mmavnD41rb6+sVsqPj4ep9PJypUrm77n\n9O369u1LeXk5X3zxBdC4TvDBgwfx+XwUFBQwevRo5syZQ01NDbW1tS3+mduLtJwt4PX5+WjfCV7d\nlkOJ49z+yEC5UNdHR3n06Wd4bt5cFi+aB8Dd035NWveW1/Ef48Yz56HpbP1sHQ/MnsO0mY/xwvzf\nX9KUMbfbzdy5cykqKiI8PJyEhISmpVHuuOMOZs2a1XSj5yc/+Qljx44lOTm56Tr0fNu9/vrrPPbY\nY9TU1OD1evnVr35Fnz59uO+++3A4HPj9fn75y18SFxeIPuczycD3i/jscCkvbfqW3Iq6gO/7V1fE\nMaDDRwipERVuJTk6HHuIDW6QKWPtoNRZz8K1h/jsSJnqUoJSbb2HnHoPcRE2UmLsWMwyXPBsEs6z\n+P1+lu8p5MWN3+Ksb/s6MOLCqk+6qa330iXWToxdDsfTyW/jNHmVdTy9+qA2gwdC5YLD4/NxvKqO\nWLuNLrHSip4i4aTx4FjyRR6vbTtGvcenupwmBY4G+ns9mC2h8WeqcbmpbfDSJTacWHvwPV2ttU+N\nC/kbQoXVJ5m9Yh8HihyqSzmHCZjYO4K0mDBCbQZX11g7g7vGEmYNnt4+eXhuK+w4VsFjK/eH1HA7\nI0mKDmPBzRkMSQt8N4YOQjKcfr+fv+3I5eUtRzHwRJGQYDWb+O9r+nF75oWXygxGIRfO2gYPcz8+\nwGeHS1WXIlph0uAuPPr9gUF1mnsxIRXOnPJaZn24V8mAAtF2GamxLJoyhPio0FiRMGTCufVoOY+u\n2Eed++LP8xD66hIbznM/uIK+Sa17vooRhUQ412eX8PjK/bi9Qf+jhoSoMAvP/mAIV3bvrLqUDhX0\n4fx4fxFPrDqAN7h/zJBjt5n5461DGN4z/uIbG1RQh3P57gIWrD0kd2SDVLjVzLO3DmFEr+AMaNCG\nc+nOfJ7bcFh1GaKDhVvNPDMlg5G9Ey6+scEEZTjf2H6Mv2w5qroMESBhFjMLp1zOqPRE1aW0q6Dr\nNPrbDglmqGnw+pj14V42Bdn0vqAK58p9J1i8SYIZitxeP7NX7OWr/ErVpbSboAnnv3LKeXr1QdVl\nCIXcXj+/+f/7OF51UnUp7SIownm4xMnsFfvwyG3ZkFd90s2Dy3YHxUR5w4ezvLaBB5fvprZBRv6I\nRjnldTz60T5DP/4CDB7OBo+PWR/uoahG3Yp4Qk/bcyoM35Vm6HAuWHuIvYU1F99QhKT3vjrOsl0F\nqsu4ZIYN55oDxXy074TqMoTmFq7LNuwdXEOGs6jGxYK1hy6+oQh5Xp+f3686cN7ntujOcOH0+f3M\n/fgbHEFwN04ERmG1iz+uN971p+HCueTzPL7UZOlKYRwr9p5g87fGGkFkqHAeKnbw8lYZASQuzVOf\nHKSqzjgPnzJMOF1ur0yYFm1SUddgqHsVhgnnXzYf5Zis/SPaaF12Kau+KVJdRosYIpzHymt57+vj\nqssQQeKZT7OpqNX/9NYQ4Xz+syOGH4ol9OGo9xhiWqH24dyeU87Wo+WqyxBBZsXeQg4V6/cIjtNp\nHU6vz89zG46oLkMEIZ8f7cfeah3OD3YVkFNeq7oMEaS+zK9i4xF9V/7XNpwOl5tXtuWoLkMEub9s\nPopP02W0tA3n69uPydO/RIf7tqyWVfv17FrRMpw1LjfLdheqLkOEiFe25eDx6vPQ5FO0DOcHuwo4\nKc80EQFSWO1i7aES1WWcQ7twur0+/vGVDDgQgfWehsecduFcfaCYMgOM3hDBZf+JGvYWVqsu4wza\nhXPpznzVJYgQ9e6Xeh17WoVzx7EKDpc6VZchQtT67FJKnfosFqdVOJd8kae6BBHCPD4/72s0wUKb\ncOZW1PGvYxWqyxAhbvmeQho8enSraBPOTwwyx04Et8o6N58eKlZdBqBTOA/o8QsR4tNDeoy31SKc\n+wqrg+bhM8L4Ps+toE6DpTS1COeag/qNzhChq97jY4sGc4i1COeGwxJOoZcN2epPbZWH85uiGnkQ\nkdDOtqPl1HvUju9WHk4d3qGEOFud28u/ctR27SkPp6wPJHS14bDahkNpOB0uN0dkuJ7Q1OZvy/Ar\nXCVBaTj3FFaj5wIRQkCNy0NOubqFzJWGc9dxvaboCHG2fSfUHaNKw7m7QMIp9KbyyenKwun2+vim\nSB4ZL/S2/0QIhvNAkYN6TUb/C9Gco2W1yobyKQunnNIKI/D6/XxTpOaxDcrCuV/hhbYQraFqbSFl\n4cyrlFkowhi+UXTdqSychdUSTmEMuZVq+jqVhLOyroHaBlk0WhhDYbVLyUghJeEskInVwkDqPT5K\nFKzKpyacckorDMJuNdMz1kZ1eVXA920N+B6BgiqXit0KcY5OdispdhMpZjdJXidJ9VUkOkpIKM8n\nofgo0ZUnAIjv9wT0ujGgtSkJp6wXJALBYjaRFGEhJcxPiqmeRI+DpLoKkqpPEF+WS3zRUcJOtqwP\n01sW+NU6lITzRI2EU7RdpM1MSoSFZKuHFP9JEhuqSaotI6GygPiSY8QVH8Pia5/RPd6KwM/tVBJO\nh0v9ymZCbyagc4SVlHBINrtJ9taS6KogyVFCQnke8UVHiaoOXGvmcwS+r1NJOF0ypjbkWc0mUiKt\npNh8JOEi2eMgqa6c+KoTJJbl0rnoKLb6WtVlNvE5Az9KSEk4VS+cJDpedJiFlAgzKRYPSf46kuqr\nSXSWkFBZQEJJDrGl+Zh9xjkOfLWBX7FDTcvplpbTyExAYqSV5DBIMTeQ6HWSfLKShJoiEsrziS/+\nlsia4Fobyu8K/H0SRS2nhFNnYZbGU85km5dkXCQ3OEioLSOxupD40n+fcrpDqzvMdzLwQ/jktDYE\nxYZbSLGbSba4SfbVfde3V1lAfHEOseX5mBQubKUlb+CP2YCHs8Hjwyd/9w5jNkHiqbucpnqSPU4S\nT1aQWFPUeJfzxFHstZWqyzQeBW9WAQ+nS1rNDhVps1Dv9ZNXB3mEAfFgjodOfaET0Ed1hcaUFB3G\n/wvwPpWc1oqO45TZPh0iyh4Cs1IibJZA71KINrOYTAHfZ8DDabOYsZgD/4MK0RYqjlklU8ak9RRG\nY1dwzCoJZ1SYhFMYS0JUWMD3qSSccRE2FbsV4pIlhkw47RJOYSwh03J2ipRwCmNJiAoP+D6VhDM+\nMvDvQkK0RWJ0iLScPTpHqtitEJcsMVRazp7xEk5hLCFzzdk7IUrFboW4JCZC6LQ2OSZc+jqFYXTv\nHEm4NUQGIQD0kFNbYRADU6KV7FdZOHtJOIVBDEyJUbJfZeGU605hFAMknELoKeRaziGpcap2LUSL\ndY21E6touKmycMZHhZGeKK2n0JuqU1pQGE6A4T06q9y9EBd1WaiGc5iEU2hueE91x6jScF7ZvROy\nYonQVXykjcFdY5XtX2k4Y+w2BiSrO20Q4kJG9k7ArGBhr1OUhhPk1Fboa0yfRKX7Vx5Olef0QjTH\nZjGR1TteaQ3KwzmsR2fi7LK2tdDL97p1IipM7XGpPJw2i5nrBqaoLkOIM4xWfEoLGoQT4MZBXVSX\nIMQZxqQnqC5Bj3AOSYuje6cI1WUIAUBG11i6abCUjhbhBJgorafQxM1DUlWXAGgVTrnuFOpF2Cxc\nPzBZdRmARuHs1jlSZqoI5a4bkKz8Lu0p2oQTYNJgObUVat32vTTVJTTRKpw3Du4iz1ERylzeNZZB\nXdSNpT2bVuG02yzcNlSfdy4RWm7P7Ka6hDNoFU6A27/XjXCrdmWJIJcYFcZ1A/S4EXSKdimIjwrj\npsFdVZchQszPs3phs+gVB72q+befjeiBVSZ6igBJjbNz6xV69G2eTstwdo2L4KbLpfUUgfFf/9Fb\nu1YTNA0nwM+zekrrKTpcr/hIbcd2axvO1LgILU81RHCZOjodi6aNgLbhBJg2Op3O8hRs0UEGpsQw\nvn+S6jKapXU4Y+02po/to7oMEaSmjU7HpHCNoIvROpwAky/vSobCFdBEcBqdnsAoDeZsXoj24TSZ\nTDx8/QBZQlO0m6gwC7O/P0B1GRelfTihcUn8H1whw/pE+3hgXF9SYuyqy7goQ4QT4L4xcnNItN2V\n3TsZphfAMOGMsdv472v6qS5DGJjdZubxCQO1vgl0OsOEExqXMpE5n+JSTRuVrsXaQC1lqHACPHzd\nAHrKI+tFK13eNZYfDeuuuoxWMVw4I8IszJ98uUwrEy0WE27liUmDlD735FIY8gjvlxwt15+iRcwm\nePKmwXQ30OnsKYYMJ8B/Dk3TbnKs0M/UUenaDzZojmHDCfDYhIGkxenfXyXUuKZfEj/P6qm6jEtm\n6HBGh1t5ZsoQosIsqksRmumdEMXcGy8zTLfJ+Rg6nNB4/bno1iGEaThZVqgRHW5l0a0ZRGqy/uyl\nCoojeliPzvx+0iAZfyuwmE08ddMgehjwBtDZgiKc0LhS94PXyh3cUGYC5twwkFHp6h/f1x6CJpwA\nd2R25+4Rxr0BINpm5vj+3BhEKzcGVTgB7h/bh5sulyF+oea+MenaLQrdVkEXTmjsYrmmn77LT4j2\nNW10b36e1Ut1Ge3O5Pf7/aqL6Ahen58nPznAP/cXqS5FdKB7R6fzi5G9VJfRIYI2nAB+v59n1mXz\nP18XqC5FdID7x6Zz94heqsvoMEEdzlP+uuUor20/proM0U7CLGZ+e8NAbtB0vdn2EhLhBFi+u4A/\nrM3GGxo/btDqHGnjmSlDuCIt+B+0HDLhBNjybRmPfrSfk26v6lLEJeidEMVzPxhCWqcI1aUEREiF\nE+BwiZPZK/aRV1mnuhTRCiN6dmbBLRlEhxt7SF5rhFw4AeoaPMxbc4jVB4pVlyJa4D+vSGPmdf2w\nmoOy569ZIRnOU5btLuCP6w9T7/GpLkWcR1SYhVnj+zMpRJ84F9LhBMgucfDIin3kVZ5UXYo4TWb3\nTsydeBld40Lj+vJ8Qj6cALUNHuatPsiagyWqSwl5YRYz00anc+fw7oZb86e9SThPs+ZAMc9tOExZ\nbYPqUkJS38Qonpg0mH7J0apL0YKE8yzOeg8vbznK+18XSJ9ogFhMJn40rDv3jk4nTFZVbCLhbMah\nYgd/WHuIvSdqVJcS1LJ6xfN/r+lLn0RpLc8m4bwAv9/Ph3sKWbzpW6pdHtXlBJU+iVHMuLovI3sb\nc2W8QJBwtkBVXQOvbMthxd4T0u3SRvGRNqaOSueWIanaPu5dFxLOVihz1vP2F3ks212Ayy0hbY1w\nq5kfXdmdu7N6EmXwhbcCRcJ5CarqGnhnZz7/8/VxahtknO6FxNqt3DY0jTsyuxMfFaa6HEORcLaB\nw+Xm3a+O896X+XJNepbUODv/58ruTMlIJULWFb4kEs52UNfgYc3BElbsKQzpu7smYESveG7P7Mao\n9ISQH0TQVhLOdvZtmZMVe06w+mAx5SEymKF3QiTX9k9m4qAu8njGdiTh7CBen5+deZV8cqCIDdml\nQXdt2icxivH9kxk/IJn0xCjV5QQlCWcAuL0+9hRU83luBZ/nVnKgyGHI0Uf9kqIZPyCJ8f2T6ZUg\ngexoEk4FnPUevsyr5PPcSj7PreBYhX4Tv+02M4O6xJKRGseQ1DiGpMbSKVLutgaShFMDpc56sksc\nHC2rI6e8tum/QJ0K221musZG0DcpqjGIaXH0T44OucnNupFwaqzY4SKnrJaj5XWUOFzUuDw4XG5q\n6j04XB5qXG4cLg91zayJFGYxExFmIdJmISLMQnJ0OKlxdlLjIugaZyctLoKusXbpf9SUhDMIeLw+\n6txezCYTVrOp8V+LSboyDE7CKYSm5KJCCE1JOIXQlIRTCE1JOIXQlIRTCE1JOIXQlIRTCE1JOIXQ\nlIRTCE1JOIXQlIRTCE1JOIXQlIRTCE1JOIXQlIRTCE1JOIXQlIRTCE1JOIXQlIRTCE1JOIXQlIRT\nCE1JOIXQlIRTCE1JOIXQlIRTCE1JOIXQlIRTCE39L6RNA1b+Bzz8AAAAAElFTkSuQmCC\n",
+            "text/plain": [
+              "<Figure size 432x288 with 1 Axes>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KwUT1Z_tJrnG",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 80
+        },
+        "outputId": "1a0ee5ef-63a4-4fbd-9e8d-89951de806eb"
+      },
+      "source": [
+        "df_usd[(df_usd['LOCATION']==\"GBR\")&(df_usd['TIME']==2018)&(df_usd['STAGES']=='VC_T') ]"
+      ],
+      "execution_count": 103,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>LOCATION</th>\n",
+              "      <th>Country</th>\n",
+              "      <th>STAGES</th>\n",
+              "      <th>MEASURE</th>\n",
+              "      <th>TIME</th>\n",
+              "      <th>Unit Code</th>\n",
+              "      <th>PowerCode Code</th>\n",
+              "      <th>PowerCode</th>\n",
+              "      <th>Value</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2117</th>\n",
+              "      <td>GBR</td>\n",
+              "      <td>United Kingdom</td>\n",
+              "      <td>VC_T</td>\n",
+              "      <td>USD_V</td>\n",
+              "      <td>2018</td>\n",
+              "      <td>USD</td>\n",
+              "      <td>6</td>\n",
+              "      <td>Millions</td>\n",
+              "      <td>2185.094678</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "     LOCATION         Country STAGES  ... PowerCode Code  PowerCode        Value\n",
+              "2117      GBR  United Kingdom   VC_T  ...              6   Millions  2185.094678\n",
+              "\n",
+              "[1 rows x 9 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 103
         }
       ]
     }
