--- a/VC_Investment.ipynb
+++ b/VC_Investment.ipynb
@@ -990,94 +990,31 @@
       "metadata": {
         "id": "ZQ53QDNVUE45",
         "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "plt.pie(df_usd[filt_total_2018 & filt_other]['Value'])\n",
-        "plt.legend(df_usd[filt_total_2018&filt_other]['Country'] )\n",
-        "\n",
-        "plt.show()"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "KwUT1Z_tJrnG",
-        "colab_type": "code",
-        "outputId": "1a0ee5ef-63a4-4fbd-9e8d-89951de806eb",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 80
-        }
+          "height": 248
+        },
+        "outputId": "67a339d5-cf62-4ff0-e5cf-d35bfac5f105"
       },
       "source": [
-        "df_usd[(df_usd['LOCATION']==\"GBR\")&(df_usd['TIME']==2018)&(df_usd['STAGES']=='VC_T') ]"
+        "plt.pie(pie_2018['Value'])\n",
+        "plt.legend(pie_2018['Country'] )\n",
+        "plt.style.use('seaborn')\n",
+        "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": 35,
       "outputs": [
         {
-          "output_type": "execute_result",
+          "output_type": "display_data",
           "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>LOCATION</th>\n",
-              "      <th>Country</th>\n",
-              "      <th>STAGES</th>\n",
-              "      <th>MEASURE</th>\n",
-              "      <th>TIME</th>\n",
-              "      <th>Unit Code</th>\n",
-              "      <th>PowerCode Code</th>\n",
-              "      <th>PowerCode</th>\n",
-              "      <th>Value</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>2117</th>\n",
-              "      <td>GBR</td>\n",
-              "      <td>United Kingdom</td>\n",
-              "      <td>VC_T</td>\n",
-              "      <td>USD_V</td>\n",
-              "      <td>2018</td>\n",
-              "      <td>USD</td>\n",
-              "      <td>6</td>\n",
-              "      <td>Millions</td>\n",
-              "      <td>2185.094678</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
+            "image/png": "iVBORw0KGgoAAAANSUhEUgAAAOcAAADnCAYAAADl9EEgAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADh0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uMy4yLjEsIGh0\ndHA6Ly9tYXRwbG90bGliLm9yZy+j8jraAAAgAElEQVR4nO3dd2BUVdrH8e+905JJJwkJLfQuoSNF\nXfu6sqy66rKKa1ldCy5YXlHEwqISlXWtICoqrIoigigqtlWx0ntROiGFlp7JTDLtvn8EUSRAgGTO\nnZnn808kzNzzOOSXc8spWsCdZyCEMB1ddQFCiLpJOIUwKQmnECYl4RTCpCScQpiUhFMIk5JwCmFS\nEk4hTErCKYRJSTiFMCmr6gLEyTMMg+IyN35/UHUp4iisVp3UZCeaptXr9ZqMrQ1/RaVV6FoQu7V+\n/+hCDa/fIGjopKXE1ev1clobAfx+CWY4sFu14zq7kXAKYVISTiFMSm4IRaD+//U16PGWXWM76t9/\n+/1SXnplJq+/+szB7z06aTKpqSnceP2IOt/z5LPTOG1QPwb07837H3zGRcPOr1ct942fRLeuHRnx\n10sOfm/mrHls/HELEyfcDcC4Bx5Dt1h45F9juO7GO3n+mRxiY2Pqdfzf+uSzr3j/g8+Y+tyjJ/T+\nkyHhFErcOfofAOTuKmDOvI/qHc5jeeOtd9mZm88bM54FYPpLTzbIcVWQcIpGlburgFtGjaVtmyzW\nbfiJ7B5dmfzUI9wy6l4uGnY+r8yYxYpV63j8iSmMvPlaRo4eR1l5BQG/n0k593NK9868/c58np78\nMs2bZRIT46Bb1451trVk6SpmvDab9+e8iq7XXrH16HsOi76ez5h7HyEzsymr12wgv2A306ZOold2\nd+4eN5Ely1bRtXMHtmzbwasvPonLVcVN/xxLSkoSbdu0Onj8qS+9xtx5CwAY+odzuGP0P7hl1L2k\npTVh9dqNFBeVcPuoG3jjrXcpKSnjo/dfIykx4YQ/O7nmFI1u9ZqNPDjudhZ+9g6f/+8bysorDv7d\n6FuvZ8ig/txz161MffG/nHv2aXwwdzpPThrPfeMfxzAMHsp5mvlzpjPr9Sns2LGrzjbyC3Yz4tpR\n5Dx0D3Fxzjpf463xMm/2y9z8j78xa/b7bNi4mUVLVvDVp7MZNfLvrFq9AYBJT07l3jG38sHc6VgO\nhHxnbj4zZ73HJx+8wScfvMG773/M9gO1WK1WPpg7nW5dO7Fk2Srmz51Ot64d+fa7JSf1uUnPKRrN\nzw932rXNIiMjHYDMzKZUVFTW+foly1ZTVFzC7DkfAOD2VFNSUkZ8vJP09FQATh3Qu873rli5hjtG\n38ADE57go/f+i9V6+I/2oIF9AWjRPIMVK9eyacs2+vftia7rdO/WiaxWLQDYtHkrp/avbee0IQP4\n3xffsnbdRvr3zT543IED+rB+w08A9O3dA4CMjHQ6dWwLQHp6GhUVrvp/WHWQcIqTlpaaQvmvekOA\nouISunfrBIDFajnk74wjDHux2238O+c+BvT/JYBFRSUHT1EBgsG633zRsAu49eZr2bEzj5xJk3lw\n3O2Hvcb6qzoMw8AwjEOO/fPAndrv1/7BONCepmmH1O31+g6+99fH/fUvBYOTG98jp7XipHVo34bC\n3XvZtj0XqA3Ut98vZeCAPsd8r65rBPwBAPr2yebDj78A4KdNW5k8dQZNmiRTUeGirLwCn8/HkmUr\nj3q8h8eP4eNPv2ThN4uO2XbbNlmsXrMBwzDYtHkbefm7D/z/tGXlgVPcb76vPTXN7tGNZctX4/f7\n8fv9rFi5luweXY/ZxsmQnjMCHevRR0Oz2WxMm/pvbrtrPEYwiGEYPD5xHE2bppG7q+Co7+3csT1r\n1m3k3gceZdw9o7ll1L1cMOwqAoEAj+fch67rjB1zK0MvupqsrBZ07VL3zaCfxcbG8NKUSVx57T/5\n8uO3j/raPr1OoUP7Npx9wXCyT+lKl07tsVh0xtx5M7eOvo8Xpr1Gm9at8Hl9tM5qwbV/u5wLL7qa\nYDDI1VdddvA0uLHI2NoIsGd/JfGxMnzveNXUeHn3vQVcMfxiqqrc9B8ylLXLP6/zerWhuDwGmen1\nu4MrPaeIWg6HnZWr1/PCy2+g6zr3jR3dqME8XtJzRgDpOcPH8fScckNICJMyTx8u6lRUXUN+lZt8\nl5u8Kjf7PdW4/X7c/gAefwBPwM+wtAw6psZhUHv7XkdD00BHQ9c0dA0sWu1/23Qdu65jt9R+tdRz\n4q8IPQmnSRRVV7O6qJS1JWXkVlaRV+WmoMqN+8BjhqM5MzEVX/CXeYKB43i+pmvawbA6LBZiLRac\nVouE1gQknAoEDINNZRWsKS5ldXEpa4pKKXB7lNQSNAyqAwGqAwHgl9ksDouFWGttUJ1WK3ZdR+Ia\nWhLOENnvqWbh7n0sLNzLsn3FeALH7hFP1A2LVzfo8V4e2AuLphFvs5FotxJvsx1ys0L1lDGfz8dd\nYx9h44+bsVotWKxWpj6bQ6uWzVnwyZece/Zp2O32Oo+Xl1/Ivn1F9O2TXa/2Q0nC2Yh2uz18mlfI\n5/l7WFdSdpKDudQKGAblXi/lXi+6phFvs5Jgs5FgO7EfoYacMvbO3I+wWHQ+X/AWAG/Oeo+Xp7/F\nhAf+jykvzOCM0049Yji/+W4JVVVuCWc0qPL5mZ+bz4e5BWEfyCMJGgYVXh8VXh+aprHX48EXDBLk\n8Nv/oZgyVl5RgctVdfDPV/71YgBmzX6fZSvWcNkVNzF/7qv86+EnWbFqHdU1Nfz9muEMveAcHvv3\nZKxWKy1bNKNd2yzuuvcRNE0jIS6O55/LIc4Zyz9G3s3evfup8foYd/c/Offs0xv5E64l4Wwg2ysq\neXNrLh/mFlDl96suJ2QMwzhw1zjA5rIKkh12UhyH9lKr12xk+ktPkp6eSteeZx42ZeylV2Zyz123\nMuk/z3Pu2adxzVWX89OmrdxzXw7vvfMKD+U8zcLP3iE5OZHfnXvZYTUMv2wYM2e9R99Bf+D8c8/g\nT0PPZ9DAvvz1Lxcx8fFnmfPWiwSDBllZLch5eCweTzW9BpzPNVddzpXDLyE1NYULLzibYZdexzNP\n/Iv27dow7dU3mfbqm5x3zukUl5Tx8fw3KCuv4PP/fdPon+nPJJwnIWAYLCzcy1tbd7JkX7HqcpQL\nGAbF1TUUV9dQ5vUSHwxi0PhTxpo0SeHbL+ayaMkKvlz4PdfffBdXXfFnxt0z6uBrYmIclJaWc96F\nV2C32ygqLj3sOCtXrmX0nQ8CtUP7+vTuQacO7XC5qrhx5N388cJzufSSC0/qMzoeEs4TUB0I8PbW\nXGZu3cluRXdZzSS5SQqu3wRuX1EJWR3bsctVBRYdg1/mdzb0lDGv14vVamXwwH4MHtiPq0dcxtBL\nrjkknN/9sJRvvlvMgvdfw2az0bxN38OOExsby4fz/nvYos9ffDyLJUtXMfPteXz6+ddMeWbiMT6R\nhiEjhI6DPxhk9rZchi74iifW/ijBPCCrTRb79uwnPzcPgNKSUlYuWUF2n2y8gQC+QJBtFS4qfIcv\nPNYQU8Zuve1+Xn9z7sE/FxbupU3r2uVFNE3HHwhQXFxGi+bNsNlsLPjkSwLBAF6vF13X8B+4DDml\ne2f+9+W3AMyZ9xELv1nE6rUbeGfuhwwa2JenJo3np81bG/CTOzrpOevBMAw+zd/N5PWbyf3VjQez\nenlgr5C2Z7VZ+dcTE3jsgccwjCCGAXfcfydN0lLZnV8IQE0gQJ7LTU0giCfwyzV5Q0wZe/Thsdx2\n13jenPUedocdm9XKU5NqT09PHzKAC4aNYPbMF3h68stceNHfGPqHc/j9eWdyx90TuPTiC2vXAUpt\nwuMTx3Hb/43nqWenERMTw8sv/BtN03ho4tNMf202FovO6JHXh+ZDRQa+H9N3e/bx7LpN/FhWcewX\nK3Jb2/b0yDjxhaRUiLNZyYiNIdZiOfaLI4hMGWsAe9weJqxYx3d79qsuJSJV+fxs97lIdtjJjI2R\n4YJ1kHD+hmEYvL0tl6fXbYqqRyKqlNV4cfn8NHPGkGgL7QoOZifh/JWdlS7GL1/HyqIS1aVEFX8w\nSJ7LTaLdRjNnLFbpRQEJJ1D7fG7Gpu1M3bCZmqDscalKhddHlc9PpjOWZLv0olEfzjyXmzGLV7Kh\ntFx1KYLaX5QFVW4qvDZaxMVG9bVoVIfzi4I9PLBsDZU+ubY0m0qfj+0VAVrFxxFjic7H8VEZTn8w\nyNPrfuK/m3eoLqVRfLVwYIMe76wzFx/zNfm78nkm5ymK95cQDAbI7pPNrWP+SWlJGSVFxXTL7s4j\nYx/irN+fzZCzTqtXu95gkO2VLppH6Wlu1IWzrMbLXYtXyljYBhQMBrlv1L2MGjuafoP6A/DmqzN5\n7IHH6DeoHx63h27Z3U/o2MaB01yP306mMzaqJnxHVTg3lVVw2/fLla06EKmWfreEVm2yDgYT4Irr\nruSyc/7Mws++Ij0jnYxmGQCsWLKCOW/MYe/uPYx/YgKdu3Vm7sw5fPbBp+i6zunnnsGVfx/By89N\nozCvkN35hUx+/XlKarx4ArWnubYouQ6NmnAu3lvEbT8sr9eaPOL45G7PpdOBfVF+pmkanbp1wl3l\n5vRzzuD0c87g688XomkaT73yNO/NmsfH8xaQkJDAV598yQtvvQTATVfcyNkXnAPUrnAw9c0XDx7T\n4w+wvcJF6yi5Do2KcH5RsIe7F6/CK49JGoemEahj2RXDAF0/dHhedt+eAKRnpLN+zXo2rttAXm4e\n/7x6JADuKje7C2r3LOmW3e2wY/qDQXZWusiKj8NpjeyhfxEfzg9y83lw2Vr8R5qnJE5a63atmffW\nu4d8zzAMdmzdzqmnH3pzyvrrsbSGgc1mY/CZQ7jnobGHvG7F4uXYjjBiKGAY7HRV0SrOecLLpISD\niD43eHPrTu5bukaC2cgGDBnA7vxCfvj6h4PfmzXjLXr27UVycvLBKWF16dy9CyuXrKDaU41hGDz1\nyJPUVFcfs03DMMhzVVFexzS0SBGxv3Ze3LiFyRs2qy5Difo8+mhIuq7z1CvPMGn847z8zEsEjSBd\nTunKHfffybpVa3nknodJbpJc53szm2fyl6uHM3LEzegWnTPO/R2OmJh6tWsA+S43RpwzIh+1ROSU\nscnrN/Hij6GbFKtaOE4Za2gtwiSgUb1XytvbcqMqmKJWYZUbV4TNIoqocH5RsIecletVlyEUMKgd\nJ92Yi3WHWsSEc1VRCfcsXkU0PiwxInJ13OMXNAx2udwR88gsIsK5vaKSUd8vj9rpXrluN36/BBRq\nn4PmuqpMeYfe6zewWusfubC/W7vPU83N3y6j3Bu5t9SPZf7ePQC0djrRomr06ZFtc7gZlJFuqiln\nVqtOarKz3q8P67u1vmCQa79axNqSMtWlCBMamtWcx049fBHqcBHWp7VPr/tJgimO6KNdhby7Y5fq\nMk5Y2IZzYeFeXovQ+Zii4Ty6agNbyuve/sHswjKce9we7l+2RnUZIgxUB4LctWgl7jB8Bhp24fQH\ng4xZvCqqbwCJ47O90sXElRtUl3Hcwi6cz63fzOo6dogS4mjm5+bz/s581WUcl7AK57J9xUzftE11\nGSJMTVy5nsIqt+oy6i1swlkTCDBhxToZCyNOmCcQ4NFV4XN6GzbhfHHjlrDY4UuY28Ld+/iiYI/q\nMuolLMK5pbyS6Zu2qy5DRIjHVm0Ii7u3YRHOnFXrTTlWUoSnPZ5qpm7YorqMYzJ9OBfsKmD5ftlY\nSDSsN7bsYHO5efdcBZOH0+3385+1P6kuQ0Qgv2Hw8Ir1GCY+IzN1ON/cupN9nmMv9iTEiVhdXGrq\nm0OmDafb7+e1TTJ2VjSuKRs2EzRp72nacL65dSelXq/qMkSE21rhYsGuQtVl1MmU4ZReU4TSCxu3\nEDBh72nKcEqvKUIp11XFZ3m7VZdxGNOFU3pNocK0n7aa7s6t6cI5a2uu9Joi5LaUV7Jw9z7VZRzC\nVOE0DIPZ23JVlyGi1Nsm+9kzVTgX7S2SjW2FMov27Ge3iX7+TBXOOWG8GJMIf0Fg3o481WUcZJpw\nltTUsLDQXOf8IvrM25FnmkEJpgnn/J35+KJ0xXZhHns81Xy3Z7/qMgAThXOuiU4nRHSbu90cl1em\nCOeK/SXsrJRVDoQ5fLN7H0X12F27sZkinJ/lm290hohefsPgy4K9qsswRzi/MdnDXyHM8DOpPJzb\nK1zkh9FyhSI6LN1XTI3ijXiVh/NbE/yGEuK3PIEAS/cVK61BeTi/3q3+3F6IunytuONQGs5Kn49V\nRbK1gjAn1Wd1SsP5w54iWfJSmFah26N0+0Cl4Vy01xwjMYQ4ksV7i5S1rTSca4plV2phbhtLy5W1\nrSycVT4/2yvCc8dhET02lKrrQJSFc31pGTLMXZhdbmUVVT41+6ooC6fK0wUh6isI/Fim5mdVWTg3\nlZl7nwohfrZBUUeiMJxyvSnCg6qzPCXh9AWD7Kx0qWhaiOMWVeEsrPLI4AMRNvJdbiVLlygJ516P\neVY4E+JY/IahZLc7ReFUP8tciONRUBX6DsUa8haBvW4JpzA3i6aR4nCQZHMQZ3FQVAWkh7YGNeGU\nnlMoZNU0mjgcJNljiNUd2HAQDNjx+ey4qm2UuW2UVtnYY2j8vLXumamx0CbEdYa2uVoSTtFYbLpO\nqsNBos1BrB6D9UDwvF47rpra0JW5rRQaGsezK+f+qtCPZ5NwirDhsOg0sceQaHMQoztqg+evDV5F\ntZ1St5Vyt5V8tAZvu9QT+ru1SsJZVF2jollhYrEWC00cMSRYa4NnMewEA3aqvQ5cHhslbhvlHiuq\nFlAtr4mSntOreOEkEVpOq5UmdgcJ1hhidAe6YScQsFNdY6fSY6Okyk5ljQUzjxlzeaOk5/QFZQBC\npIi3WWlijyHe6sChOdANBwG/HY/XRoXbTrHLSoXPSriPpHb7Qt+mknD6ZU+UsJBks5F8IHh2zYEW\nrO3xPDV2Ktw2il02yvwWomHKvMcXJT2nDN1TSwOS7HaS7Q7irTHYsaMFHfj8tcEr99godlkp9ltQ\nuzikefgU9CchD6dhGAQknI1GB5IdDpJtDpxWB3Zqezyvz467xk65p/ZUsyigo251nPBjEAU9p/Sa\njetPKbto5pqDt+IIi6fZgJSQlhQR4mKbAZ+GtM2Qh1P24Gxc75VmEa+P5vImSzGK5uDzy1YXDSHG\nnhDyNkM+8F3XGv4BsTiUK2hletlgPndOJDFjGJpmUV1S2LPo9pC3GfJwxlgsOHTlu0BEhQJvLFPL\nh7ImZSLJqUNUlxPWdD30906VpCTRblPRbNRa505mStXfKGj6IEmJXVWXE5Z0PfQ/sxLOKLKwojlT\na0bjybzjwA0OUV9WiyPkbaoJp03CqYqhabxb1pnXuR9L5vXYbfGqSwoLCc7MkLepJJxJ0nMq5zEs\nvFbWn48cE4nPvFTJaVs4SYpvFfI25bQ2yu3zO3ix7DyWJuWQnH6W6nJMKzlawplkD/1taXF0mzwJ\nTKkczo60CSQnZ6sux3SS4lqGvE0l4cx0xqhoVtTDD64MplSPpDzzbuLjslSXYxpJ8aH/LJSEMys+\nTkWz4jh8WNaOGcGx0OwmHPZk1eUoppEU3yLkrUo4xRHVGDozS3szz/4QzszhSkbJmEF8bDpWS+jP\n9pSEs1W8E4sM4wsbpX4708rO4vuEHJKang+NsEaPmam4UwuKwmnTdVrFO1U0LU7Ctpp4nq/4M5tS\nHyY5pZ/qckImKS6KwgnQMTH0o/xFw1helcYUzw0UZ9xLYnw71eU0uqT40N+pBZXhTJJwhrtPylsz\nzT8Gf+atxDrSVJfTaFIS2yppV8kyJQCdkhNVNS0akB+Nt8t6kGDtwuVNlhLYNwd/ILI2qmqR1ldJ\nu8p6zj5pTaLstkJkqwzYeLV0CF/GTSQp449oWmRMC3TGpJGa1F5J28o+wRSHnQ5yahtx8rxOni//\nI2tTJpKcOkh1OSetZbq6G19Kf731T09V2bxoRGvdKUypuobdTR8gKbGz6nJOWMum/ZW1rTicTVQ2\nL0Lgy4oWvFBzG57M23HGZqgu57i1ajpAWdtKw9kvPVWuO6NAUNN5t6wLM7UHsDW7Dps1POaQxtiT\nyWjSQ1n7SsOZLNedUcUdtDKj9FQ+iX2EhIxL0DVlDwvqpU2z09B1dYujKb+lNkCuO6POHl8ML5T/\nnuXJOSSn/U51OUfUtrna2pSH88zm4XcdIhrGj55EpriuYGf6BJKT1Z0+Hkm75mcqbV95OAc0TSUt\nJvSLJwnz+L4yg+c9I6nM/D/inWqGyv1WenIXJesG/ZrycOqaxvktZSW4aGdoGvPLOjLDGIfW7EYc\n9iSl9XRuPVRp+2CCcAL8Iau56hKESdQYOm+U9uF9+8PEZf5FyRxSTbPQs8PwkLf7W6YIZ6/UFFo4\nY1WXIUyk2G/npbKz+T4xh+T0c0PadvsWZ5HgVH82Z4pwAlwgvaeow7bqeKZUXsaWtEdITukTkjZ7\ndRwRknaOxTTh/EMrCac4sqWuNKZ4bqQkYywJ8W0arZ0EZzPaNTfHEqGmCWfn5ES6yjQycQwfl7fh\nFf/dBJrdSoyj4Yd/ZncYrnTgwa+ZJpwAV3eK/Fn14uT50JlV2oO51gnEZo5osMW3NE2nZ4crGuRY\nDcFU4bygVTMyYmVNW1E/ZQEbL5edzlfxOSQ2vfCk55C2a34miXHmubwyVTitus5VHduoLkOEmV01\nTqZW/In1KRNJTh14wsfp2fHKBqzq5JkqnACXtssizmruAdHCnFa7U5hSdS17m95PYkKn43pvfGwG\nHVqE9pHNsZgunAk2G39uq2YpQhEZ/lfRkhe9t1OTORpnTP3GbvfpfI1pbgT9TAu48wzVRfxWYZWb\nCz9eSMAwXWkizMTrfi5PWo6x/x18/qo6X+OMSePmi7/HbjPXWsqm6zkBmsc5GSqDEkQDcAWtTC8d\nyKexE0nIuBhNO7x3HHzKKNMFE0zac0Jt7znsk6/xBoOqSxERpHtsOWdZPqS06FsAEuNacNNF32Cx\nmG8fGFP2nFDbe/61Q2vVZYgIs8GTxGTXCPLSx5OU1I0h2bebMphg4p4ToNzr5cIFC6nw+VSXIiJQ\nx8R45pyndimSozFtzwm1O2Df0r2j6jJEhBrTq7tpgwkmDyfAX9u3pn1ieKzWJsLHmc2aMijD3Pu7\nmD6cVl3n7l7dVJchIohD17mrp/l/pkwfToDBGen8MSv0236LyDTqlM60TjD/7uphEU6Ae3t3l0Hx\n4qT1SUvhb53UbOl3vMImnIl2Gw/1y1ZdhghjsRYLD/fvia6Fxz4DYRNOgMGZ6Qxvn6W6DBGmbuvR\nmax485/O/iyswglwZ3ZXWsWZb6iVMLcB6alc2aGN6jKOS9iF02m1MnFAz/ArXCjjtFp4qH82Wpic\nzv4sLH/Ge6c14cZuMjhBHJsGTOzfkxZheLYVluEEGNmtI+e0kH1WxNHd1K0j54bpjgJhG05N08gZ\n0ItOsoWgOIKzm2cwMozPsMI2nFB7/fnckH40cZhzVoFQp0NiPDkDeoXddeavhXU4oXZq2X8G9cEa\nxv8IomEl2mw8O6QfcbbwXosq7MMJtdvX39fnFNVlCBOwaBr/HtSbVmH0PPNIIiKcAJe1y+L6Lu1V\nlyEU0oGcAT0ZnJGuupQGETHhBLi9RxeuDpNxk6JhacCE/tlcGEETJCIqnABjenZjRJiNBBEn7/4+\np3Bxm8haUjXiwgkwtnd3hreX9Yeixdhe3fhLBP57R2Q4Ae7r3Z3L2skg+Uh3Z3YXRnSMzEuZiA2n\npmk82OcUWT0+QmnAHT26cF3nyL0JaOrV9xrKs+t+YtpP21SXIRqIVdN4qH82w1q3VF1Ko4qKcALM\n2b6LR1auly0ewlyc1cqTg/owODMyHpccTdSEE+C7PfsYs2gVLr9fdSniBDR3xvLcaf3olBQdO6BH\nVTgBtldUMur75exyuVWXIo5Dr9QUnh7cl9QYh+pSQibqwgm1K8nftWgVi/cVqS5F1MOlbVsxrnd3\n7BbzLgDdGKIynABBw2DGpu08t34TfrkONaVEm43x/XpwfpjOxzxZURvOn20sLWfsklXsqKx770ah\nRt+0Jjx2ai8ynbGqS1Em6sMJ4PEHeGLNRmZv36W6lKhn1TRu6d6RG7p0CJslLBuLhPNXFhbuZfzy\ntZTUeFWXEpVaxjl57NRe9ExNUV2KKUg4f6Oouoan1v7IB7kFyAcTGg5d59rO7bihawdiouymz9FI\nOI9gbXEpj67awPrSctWlRLQzmzXl7l7daRUffqvjNTYJ51EYhsF7O/N5Zt0mimtqVJcTUVrHx3FP\nr26c3qyp6lJMS8JZDy6fjxc3buWNLTvksctJirNauaFLe67p3A6bHrHzLhqEhPM45LnczNi0jfd2\n5uMNBlWXE1aS7DZGdGjDlR3bkmS3qS4nLEg4T0BRdTWvb97J7G25Mk73GNJjHFzdqS1/ad8apzW8\nV8MLNQnnSaj0+Xh7ay6vb9khj19+o4Uzluu6tOeSNi2jbthdQ5FwNoCaQID5uQW8u31XVN/d1YFB\nmelc2rYVZzXPwCrXlCdFwtnAtpRXMm9HHgt2FUbNHd5WcU6GtW7BxW1b0SyKh9s1NAlnIwkYBkv2\nFfHxrkK+KNhDpS+yrk3TYhyc1zKTP2a1IFtG9DQKCWcI+IJBVheVsmhfEYv3FrGhpIxwu9dr13V6\np6UwOCOdIZnpdEpKCOt9SMKBhFOBcq+PpQeCumhvEXlV5pv4rQFtE+IZnJnGoIx0+qenEmuVGzuh\nJOE0gaLqGraUV7KlvOLA10q2VVRSHQhN/+q0WuiUlEjn5AQ6JSXSKTmRTkkJ8uhDMQmnSQUNgzyX\nm60Vlez1VFNSXUNJjZeSmhpKqr0H//to17IatSNyUmMcpMY4SItxkBpjr/3qcJAe66BtQjwt45xy\nimpCEs4wFzQMAoZx8CvUzom06DoWCVxYk/OWMKdrWtRPSo5U8pRYCJOScAphUhJOIUxKwimESUk4\nhTApCacQJiXhFMKkJJxCmJSEUwiTknAKYVISTiFMSsIphElJOIUwKQmnECYl4RTCpCScQpiUhFMI\nk5JwCmFSEk4hTErCKYRJSd01/kIAAAAmSURBVDiFMCkJpxAmJeEUwqQknEKYlIRTCJOScAphUhJO\nIUzq/wEZna3jS0xGfAAAAABJRU5ErkJggg==\n",
             "text/plain": [
-              "     LOCATION         Country STAGES  ... PowerCode Code  PowerCode        Value\n",
-              "2117      GBR  United Kingdom   VC_T  ...              6   Millions  2185.094678\n",
-              "\n",
-              "[1 rows x 9 columns]"
+              "<Figure size 432x288 with 1 Axes>"
             ]
           },
           "metadata": {
             "tags": []
-          },
-          "execution_count": 103
+          }
         }
       ]
     }
