fixed logical mistace

--- a/VC_Investment.ipynb
+++ b/VC_Investment.ipynb
@@ -225,7 +225,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# 2018 Piechart creation"
+        "# 2018 Pie Chart creation"
       ]
     },
     {
@@ -248,25 +248,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "U-C__xaBdqh8",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "df_usd[filt_total_2018 & ~filt_other]['Value'].sum()"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "0GQyhHWPeMzm",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "pie_2018.loc[1]=['OTH', 'Other',10066.595295685644 ]\n",
+        "pie_2018.loc[1]=['OTH', 'Other', df_usd[filt_total_2018 & ~filt_other]['Value'].sum()]\n",
         "pie_2018"
       ],
       "execution_count": 0,
