--- a/VC_Investment.ipynb
+++ b/VC_Investment.ipynb
@@ -20,7 +20,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/csd-oss/vc-investmemt/blob/iss4/VC_Investment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/csd-oss/vc-investmemt/blob/quic_fix/VC_Investment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -148,10 +148,10 @@
         "colab": {}
       },
       "source": [
-        "filt_total_us = (df_usd['STAGES'] == \"VC_T\") & (df['LOCATION']== \"USA\")\n",
-        "filt_seed_us = (df_usd['STAGES'] == \"SEED\") & (df['LOCATION']== \"USA\")\n",
-        "filt_start_us = (df_usd['STAGES'] == \"START\") & (df['LOCATION']== \"USA\")\n",
-        "filt_later_us = (df_usd['STAGES'] == \"LATER\") & (df['LOCATION']== \"USA\")"
+        "filt_total_us = (df_usd['STAGES'] == \"VC_T\") & (df_usd['LOCATION']== \"USA\")\n",
+        "filt_seed_us = (df_usd['STAGES'] == \"SEED\") & (df_usd['LOCATION']== \"USA\")\n",
+        "filt_start_us = (df_usd['STAGES'] == \"START\") & (df_usd['LOCATION']== \"USA\")\n",
+        "filt_later_us = (df_usd['STAGES'] == \"LATER\") & (df_usd['LOCATION']== \"USA\")"
       ],
       "execution_count": 0,
       "outputs": []
